--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -327,6 +327,10 @@
 
 <div class="content" role="main">
 
+<router-outlet></router-outlet>
+
+  <app-testcomp1 [user]="user"></app-testcomp1>
+  <app-testcomp2></app-testcomp2>
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
